--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <header class="custom-header">
     <div class="logo">
-      <h1>MiLogooo!</h1>
+      <h1>MiLogooo!!</h1>
     </div>
     <nav class="nav-menu">
       <ul>
