nuevo h2 sobre carrusel de imagenes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </div>
   </section>
-
+<h2>Desde la rama main</h2>
   <section class="carousel-section">
     <h2>Nuestros Servicios</h2>
     <div class="carousel-container">
